--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/elvis1.jpg" width=300 height=300 class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/elvis0.jpg" width=300 height=300 class="img-fluid rounded b-shadow-a" alt="profile img">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7 text-muted">
