--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
                         <!-- <img src="assets/img/elvis1.jpg" class="mw-100" alt="profile img"> -->
-                        <img src="assets/img/elvis1.jpg" width=300 height=300 class="img-fluid rounded b-shadow-a" alt="profile img">
+                        <img src="assets/img/elvis.PNG" width=300 height=300 class="img-fluid rounded b-shadow-a" alt="profile img">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7 text-muted">
