--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <p><span class="title-s text-muted">Names: </span> <span style="font-weight: bold;">ELVIS Mugisha</span></p>
                         <p><span class="title-s text-muted">Profile: </span> <span style="font-weight: bold;">Software Engineer</span></p>
                         <p><span class="title-s text-muted">Email: </span> <span style="font-weight: bold;">mugishaelvis104@gmail.com</span></p>
-                        <p><span class="title-s text-muted">Phone: </span> <span style="font-weight: bold;">+(250) 780-527-973</span></p>
+                        <p><span class="title-s text-muted">Phone: </span> <span class="text-muted" style="font-weight: bold;">+(250) 780-527-973</span></p>
                       </div>
                     </div>
                   </div>
