--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
   <main id="main">
     <section id="about" class="about-mf sect-pt4" style="background-color: black;">
       <div class="container" style="background-color: black;">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a text-muted">
+                About Me
+              </h3>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
         <div class="row" style="background-color: black;">
           <div class="col-sm-12" style="background-color: black;">
             <div class="box-shadow-full bg-dark">
