--- a/index.html
+++ b/index.html
@@ -185,9 +185,6 @@
               <h3 class="title-a text-muted">
                 Services
               </h3>
-              <p class="subtitle-a text-muted">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              </p>
               <div class="line-mf"></div>
             </div>
           </div>
@@ -310,7 +307,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End Services Section -->
+    </section>
 
     <!-- ======= Counter Section ======= -->
     <div class="section-counter" style="background-color: black">
@@ -363,7 +360,7 @@
           </div>
         </div>
       </div>
-    </div><!-- End Counter Section -->
+    </div>
 
     <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route" style="background-color: black;">
@@ -374,9 +371,9 @@
               <h3 class="title-a text-muted">
                 Portfolio
               </h3>
-              <p class="subtitle-a text-muted">
+              <!-- <p class="subtitle-a text-muted">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              </p>
+              </p> -->
               <div class="line-mf"></div>
             </div>
           </div>
@@ -529,7 +526,7 @@
 
         </div>
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
 
     <!-- ======= Testimonials Section ======= -->
     <div class="testimonials" style="background-color: black;">
@@ -580,7 +577,7 @@
           </div>
         </div>
       </div>
-    </div><!-- End Testimonials Section -->
+    </div>
 
     <!-- ======= Blog Section ======= -->
     <!-- <section id="blog" class="blog-mf sect-pt4 route">
@@ -734,12 +731,6 @@
                               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                             </div>
                           </div>
-                          <!-- <div class="col-md-12 text-center my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
-                          </div> -->
-                          
                           <div class="col-md-12 text-center"><br>
                             <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
                           </div>
@@ -762,8 +753,8 @@
                       </p>
                       <ul class="list-ico text-muted">
                         <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <li><span class="bi bi-phone"></span> +(250) 780-527-973</li>
+                        <li><span class="bi bi-envelope"></span> mugishaelvis104@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
