--- a/index.html
+++ b/index.html
@@ -174,7 +174,97 @@
           </div>
         </div>
       </div>
-    </section><!-- End About Section -->
+    </section>
+
+    <section id="about" class="about-mf sect-pt4" style="background-color: black;">
+      <div class="container" style="background-color: black;">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h5 class="title-a text-muted">Why Choose Me</h5>
+              <h3 class="title-a text-muted">
+                My Expertise Area
+              </h3>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row" style="background-color: black;">
+          <div class="col-sm-12" style="background-color: black;">
+            <div class="box-shadow-full bg-dark">
+              <div class="row bg-dark">
+                <div class="col-md-6" >
+                  <div class="row">
+                    <div class="about-img">
+                      <img src="assets/img/elvis1.JPG" width=300 height=300 class="img-fluid rounded b-shadow-a" alt="profile img">
+                    </div>
+                    <div class="about-info">
+                      <p><span class="title-s text-muted">Names: </span> <span style="font-weight: bold;">ELVIS Mugisha</span></p>
+                      <p><span class="title-s text-muted">Profile: </span> <span style="font-weight: bold;">Software Engineer</span></p>
+                      <p><span class="title-s text-muted">Email: </span> <span style="font-weight: bold;">mugishaelvis104@gmail.com</span></p>
+                      <p><span class="title-s text-muted">Phone: </span> <span class="text-muted" style="font-weight: bold;">+(250) 780-527-973</span></p>
+                    </div>
+                  </div>
+                  <div class="skill-mf">
+                    <p class="title-s text-muted" style="font-weight: bold; font-size: 30px;">Skill</p>
+                    <span class="text-muted" style="font-weight: bold;">Python & Django</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span class="text-muted" style="font-weight: bold;">HTML</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span class="text-muted" style="font-weight: bold;">CSS & BOOTSTRAP</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span class="text-muted" style="font-weight: bold;">PHP & JAVASCRIPT</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span class="text-muted" style="font-weight: bold;">MySQL & SQL</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="about-me pt-4 pt-md-0">
+                    <div class="title-box-2">
+                      <h5 class="title-left text-muted">
+                        About me
+                      </h5>
+                    </div>
+                    <p class="lead" style="font-weight: bold;">
+                      Motivated and results-driven Software Engineer with 1+ year's of experience.
+                      I have continuously demonstrated experience in improving software performance by
+                      implementing new ideas, updating, testing, and coding. Experience in developing tools which increase accuracy, efficacy and performance of software. <br> 
+                     
+                    </p>
+                    <p class="lead" style="font-weight: bold;">
+                      I am a fast leaner and often try to extend and improve my skills, I have a good ability to build constructive and social relations
+                    </p>
+                    <p class="lead" style="font-weight: bold;">
+                      Confident in working with various computer systems and software configuration processes. Comfortable in working in fast-paced environment and delivering exceptional results in a timely manner
+                    </p>
+                    <p class="lead" style="font-weight: bold;">
+                      Experienced Front-End and Back-End Developer with excellent attention to detail and problem-solving skills. <br>
+                      Proven experience with Python. Proficient in web development techniques and creating web applications such as Python Django, JavaScript, CSS, HTML and MySQL.
+                    </p>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <a href="assets/img/MugishaElvis Cv.pdf" download="ElvisMugisha_cv.pdf" target="_blank">Download My CV <span></span> </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services-mf pt-5" style="background-color: black;">
