--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
               </h3>
               <div class="line-mf"></div>
             </div>
+          </div>
+          <div class="row bg-dark">
+            <div class="col-sm-6 col-md-5 bg-dark">
             <div class="skill-mf">
               <p class="title-s text-muted" style="font-weight: bold; font-size: 30px;">Skill</p>
               <span class="text-muted" style="font-weight: bold;">Python & Django</span>
@@ -219,6 +222,32 @@
                 <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+          </div>
+          <div class="col-sm-6 col-md-5 bg-dark">
+            <div class="skill-mf">
+              <p class="title-s text-muted" style="font-weight: bold; font-size: 30px;">Skill</p>
+              <span class="text-muted" style="font-weight: bold;">Python & Django</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <span class="text-muted" style="font-weight: bold;">HTML</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <span class="text-muted" style="font-weight: bold;">CSS & BOOTSTRAP</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <span class="text-muted" style="font-weight: bold;">PHP & JAVASCRIPT</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <span class="text-muted" style="font-weight: bold;">MySQL & SQL</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
           </div>
         </div>
       </div>
