--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
               <div class="line-mf"></div>
             </div>
           </div>
-          <div class="row bg-dark">
-            <div class="container text-center">
+          <div class="container bg-dark">
+            <div class="row text-center">
               <div class="col-sm-6 col-md-5 bg-dark">
                 <div class="skill-mf">
                 <p class="title-s text-muted" style="font-weight: bold; font-size: 30px;">Skill</p>
