--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           </div>
           <div class="container bg-dark">
             <div class="row text-center">
-              <div class="col-sm-6 col-md-5 bg-dark">
+              <div class="col-sm-6 col-md-5 bg-dark text-center">
                 <div class="skill-mf">
                 <p class="title-s text-muted" style="font-weight: bold; font-size: 30px;">Skill</p>
                 <span class="text-muted" style="font-weight: bold;">Python & Django</span>
@@ -224,7 +224,7 @@
                 </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-5 bg-dark">
+              <div class="col-sm-6 col-md-5 bg-dark text-center">
                 <div class="skill-mf">
                 <p class="title-s text-muted" style="font-weight: bold; font-size: 30px;">Skill</p>
                 <span class="text-muted" style="font-weight: bold;">Python & Django</span>
